--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "A Phaser 3 Project Template",
   "main": "src/index.js",
   "scripts": {
+    "test": "jest",
     "build": "webpack --config webpack/prod.js ",
     "start": "webpack-dev-server --config webpack/base.js --open"
   },
+  "jest": {
+     "setupFiles": ["jest-canvas-mock"]
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/photonstorm/phaser3-project-template.git"
@@ -20,7 +24,7 @@
   "homepage": "https://github.com/photonstorm/phaser3-project-template#readme",
   "devDependencies": {
     "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-env": "^7.14.7",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -29,6 +33,8 @@
     "eslint-plugin-import": "^2.23.4",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^27.0.4",
+    "jest-canvas-mock": "^2.3.1",
     "raw-loader": "^3.1.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
@@ -41,6 +47,8 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "phaser": "^3.50.0"
+    "node-fetch": "^2.6.1",
+    "phaser": "^3.50.0",
+    "regenerator-runtime": "^0.13.7"
   }
 }
