--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "webpack-dev-server --config webpack/base.js --open"
   },
   "jest": {
-     "setupFiles": ["jest-canvas-mock"]
-},
+    "setupFiles": [
+      "jest-canvas-mock"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/photonstorm/phaser3-project-template.git"
@@ -31,7 +33,7 @@
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
-    "file-loader": "^4.2.0",
+    "file-loader": "^4.3.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^27.0.4",
     "jest-canvas-mock": "^2.3.1",
